--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -7,8 +7,8 @@
   top: 0;
   left: 0;
   width: 114px;
-  height: 100%;
-  position: absolute;
+  height: 55em;
+  position: fixed;
   background-color: #605c5cb0;
 
   nav {
