--- a/src/App.scss
+++ b/src/App.scss
@@ -19,8 +19,8 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'proxima-nova', Montserrat,
     'Open-Sans', Roboto, Lato, Adelle;
   line-height: 1.5;
-  background-color: #323232;
-  color: #fed8b2;
+  background-color: #fcffe0;
+  color: #b39ddc;
 }
 
 a {
@@ -30,5 +30,5 @@ a {
 
 .generic {
   padding-left: 8em;
-  margin-top: 12em;
+  margin-top: 8em;
 }
