--- a/src/components/Projects.scss
+++ b/src/components/Projects.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  padding-bottom: 8em;
+  // padding-bottom: 8em;
   margin-bottom: 2em;
 }
 
@@ -10,9 +10,9 @@
   border: 0.5px solid;
   border-radius: 8%;
   width: 50%;
-  padding: 1em 2em 10em 2em;
+  padding: 1em 2em 1em 2em;
   margin: 1em 2em 1em 2em;
   text-align: center;
-  height: 10em;
+  height: 19em;
   line-height: 18px;
 }
