changes to styles on multiple components

--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -1,6 +1,6 @@
 .home-section {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: stretch;
 }
 .profile_pic {
