--- a/src/components/Projects.scss
+++ b/src/components/Projects.scss
@@ -4,17 +4,23 @@
   justify-content: center;
   // padding-bottom: 8em;
   margin-bottom: 2em;
-  padding: 6em;
-  margin: 6em;
+  padding: 2em;
+  margin: 2em;
 }
 
 .wrapper {
   border: 0.5px solid;
-  border-radius: 8%;
+  border-radius: 2%;
+  box-shadow: 0px 0px 10px #888888;
   width: 50%;
   padding: 1em 2em 1em 2em;
   margin: 1em 2em 1em 2em;
   text-align: center;
-  height: 19em;
+  height: 15em;
   line-height: 18px;
+}
+.projects .wrapper:hover {
+  background-color: #605c5c34;
+  opacity: 1;
+  overflow: hidden;
 }
