--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,4 @@
+@import './styles/variables.scss';
 *,
 *:before,
 *:after {
@@ -19,14 +20,14 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'proxima-nova', Montserrat,
     'Open-Sans', Roboto, Lato, Adelle;
   line-height: 1.5;
-  background-color: #ffffff;
-  color: #b39ddc;
+  background-color: rgb(49, 164, 172);
+  color: $font-color;
   font-weight: 600;
 }
 
 a {
   text-decoration: none;
-  color: #fed8b2;
+  color: $header_footer;
 }
 
 .generic {
