adding skills images - fixing styling

--- a/src/App.scss
+++ b/src/App.scss
@@ -15,7 +15,7 @@ body {
   max-width: 80em;
   min-height: 100vh;
   margin: 0 auto;
-  padding-top: 1em;
+  padding: 0;
 
   font-family: -apple-system, BlinkMacSystemFont, 'proxima-nova', Montserrat,
     'Open-Sans', Roboto, Lato, Adelle;
@@ -27,10 +27,13 @@ body {
 
 a {
   text-decoration: none;
-  color: $header_footer;
+  color: $font-color-footer-header;
 }
 
 .generic {
   padding: 1em;
   margin: 1em;
+}
+.titles {
+  text-align: center;
 }
