--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,5 +5,5 @@ $font-primary: 'Poppins', sans-serif;
 
 // Colors
 $background_color_header_footer: #5ecdf7;
-$font-color: #535355;
-$header_footer: #faf8f6;
+$font-color: #ddebec;
+$font-color-footer-header: rgb(49, 164, 172);
