--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -1,33 +1,25 @@
 @import './../styles/variables.scss';
 
 .header {
-  //   width: 60px;
-  //   height: 100%;
-  //   min-height: 500px;
-  //   //   -webkit-box-orient: vertical;
-  //   //   -webkit-box-direction: normal;
   top: 0;
   left: 0;
   width: 114px;
   height: 55em;
   position: fixed;
-  // background-color: $background_color_header_footer;
 
   nav {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    // z-index: 3;
   }
   nav a {
-    padding: 3em 0.5em 3em 0.5em;
+    padding: 1em 0.5em 1em 0.5em;
+    margin: 4em 0.6em 4em 0.6em;
+    color: $font-color;
   }
   a:hover {
     background-color: #cbc7c734;
     opacity: 1;
     overflow: hidden;
-  }
-  a:visited {
-    color: #cbc7c734;
   }
 }
