--- a/src/components/Projects.scss
+++ b/src/components/Projects.scss
@@ -6,20 +6,21 @@
   justify-content: center;
   // padding-bottom: 8em;
   margin-bottom: 2em;
-  padding: 2em;
-  margin: 2em;
+  padding: 1em;
+  margin: 1em;
 }
 
-.wrapper {
+.item-wrapper {
   border: 0.5px solid;
   border-radius: 2%;
   box-shadow: 0px 0px 10px #888888;
   width: 50%;
-  padding: 1em 2em 1em 2em;
-  margin: 1em 2em 1em 2em;
+  padding: 1em 1em 1em 1em;
+  margin: 1em 1em 1em 1em;
   text-align: center;
   height: 23%;
   line-height: 18px;
+  background-color: #ddebec;
 }
 
 .project-img {
@@ -28,8 +29,8 @@
   margin: 5px;
   width: 100%;
 }
-.projects .wrapper:hover {
-  background-color: #605c5c34;
+.projects .item-wrapper:hover {
+  background-color: #a9d4d9;
   opacity: 1;
   overflow: hidden;
 }
@@ -37,16 +38,16 @@
 .project_title {
   position: relative;
   z-index: 20;
-  color: $font-color;
+  color: $font-color-footer-header;
   font-weight: 300;
-  line-height: 2;
+  line-height: 0.1em;
 }
 
 .project_button {
   display: inline-block;
   font-size: 1rem;
   background: #08666d;
-  color: $header_footer;
+  color: $font-color;
   padding: 10px;
   margin: 10px;
   border: 1px solid black;
