--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -1,12 +1,8 @@
-.home-section {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: stretch;
-}
-.profile_pic {
-  width: 14em;
-  height: 14em;
-  border-radius: 50%;
-  box-shadow: 0 0.125em 0.75em -0.5em;
-  margin-right: 14em;
+// .home-section {
+//   display: flex;
+//   justify-content: space-evenly;
+//   align-items: stretch;
+// }
+.titles.me {
+  text-align: center;
 }
