--- a/src/components/Projects.scss
+++ b/src/components/Projects.scss
@@ -4,17 +4,32 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  // padding-bottom: 8em;
   margin-bottom: 2em;
   padding: 1em;
   margin: 1em;
+
+  // @media screen and (max-width: 687px) {
+
+  // }
+}
+
+@media screen and (max-width: 687px) {
+  .projects {
+    flex-direction: column;
+  }
+  .item-wrapper {
+    padding: 4px;
+    margin: 4px;
+    line-height: 12px;
+    box-shadow: none;
+  }
 }
 
 .item-wrapper {
   border: 0.5px solid;
   border-radius: 2%;
   box-shadow: 0px 0px 10px #888888;
-  width: 50%;
+  width: 95%;
   padding: 1em 1em 1em 1em;
   margin: 1em 1em 1em 1em;
   text-align: center;
@@ -29,10 +44,15 @@
   margin: 5px;
   width: 100%;
 }
-.projects .item-wrapper:hover {
-  background-color: #a9d4d9;
-  opacity: 1;
-  overflow: hidden;
+
+@media all and (min-width: 900px) {
+  &:hover {
+    .projects .item-wrapper:hover {
+      background-color: #a9d4d9;
+      opacity: 1;
+      overflow: hidden;
+    }
+  }
 }
 
 .project_title {
