--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -23,8 +23,63 @@
     overflow: hidden;
   }
 }
-@media screen and (max-width: 687px) {
+// media queries for mobile view
+@media screen and (max-width: 854px) {
   .header {
-    display: none;
+    display: flex;
+    width: 100%;
+    height: 6em;
+    position: relative;
+    justify-content: flex-end;
+
+    nav {
+      justify-content: space-between;
+    }
+    nav a {
+      padding: 0.2em;
+      margin: 0.2em;
+    }
+  }
+
+  .mobile-view-nav {
+    overflow-y: scroll;
+    list-style: none;
+    position: fixed;
+    top: 0;
+    // background: darkcyan;
+    left: 0;
+    bottom: 0;
+    height: 100vh;
+    width: 0;
+    overflow: hidden;
+    max-width: 290px;
+    z-index: 9;
+  }
+  .navBar {
+    position: relative;
+  }
+  .navBar button {
+    position: fixed;
+    left: 40px;
+    top: 40px;
+    z-index: 10;
+    cursor: pointer;
+  }
+
+  .mobile-view-nav.showMenu {
+    width: 100%;
+  }
+
+  a {
+    display: block;
+    padding: 10px 40px;
+    text-decoration: none;
+    color: $font-color;
+    text-transform: uppercase;
+    font-weight: bold;
+  }
+
+  .mobile-view-nav li:first-child {
+    margin-top: 7rem;
   }
 }
