adding icons for hamburger menu on mobile view

--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -64,6 +64,8 @@
     top: 40px;
     z-index: 10;
     cursor: pointer;
+    background: transparent;
+    border: none;
   }
 
   .mobile-view-nav.showMenu {
